--- a/desarrollo-web/tareas/api_basics_tcg/package.json
+++ b/desarrollo-web/tareas/api_basics_tcg/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Nicole Dávila - A01784217",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.19.2"
+  }
 }
